# SGeom

./: CMakeLists.txt  LGPLv3.txt  Readme.md
GEOMAlgo/: CMakeLists.txt  GEOMAlgo_AlgoTools.cxx  GEOMAlgo_AlgoTools.hxx  GEOMAlgo_BndSphere.cxx  GEOMAlgo_BndSphere.hxx  GEOMAlgo_BndSphere.lxx  GEOMAlgo_BndSphereTree.cxx  GEOMAlgo_BoxBndTree.cxx  GEOMAlgo_BoxBndTree.hxx  GEOMAlgo_BuilderShape.cxx  GEOMAlgo_BuilderShape.hxx  GEOMAlgo_ClsfQuad.cxx  GEOMAlgo_ClsfSolid.cxx  GEOMAlgo_ClsfSolid.hxx  GEOMAlgo_ClsfSurf.cxx  GEOMAlgo_DataMapOfPassKeyInteger.hxx  GEOMAlgo_DataMapOfShapeMapOfShape.hxx  GEOMAlgo_Extractor.hxx  GEOMAlgo_FinderShapeOn2.cxx  GEOMAlgo_FinderShapeOnQuad.hxx  GEOMAlgo_GetInPlace.cxx  GEOMAlgo_GetInPlaceAPI.cxx  GEOMAlgo_GetInPlace_2.cxx  GEOMAlgo_GetInPlace_3.cxx  GEOMAlgo_GlueAnalyser.cxx  GEOMAlgo_GlueAnalyser.hxx  GEOMAlgo_Gluer.cxx  GEOMAlgo_Gluer2.cxx  GEOMAlgo_Gluer2_1.cxx  GEOMAlgo_Gluer2_3.cxx  GEOMAlgo_GluerAlgo.cxx  GEOMAlgo_GluerAlgo.hxx  GEOMAlgo_HAlgo.cxx  GEOMAlgo_HAlgo.hxx  GEOMAlgo_IndexedDataMapOfPassKeyShapeListOfShape.hxx  GEOMAlgo_IndexedDataMapOfShapeBox.hxx  GEOMAlgo_KindOfBounds.hxx  GEOMAlgo_KindOfDef.hxx  GEOMAlgo_ListIteratorOfListOfCoupleOfShapes.hxx  GEOMAlgo_ListOfCoupleOfShapes.hxx  (+19 more)
src/GEOMAlgo/: CMakeLists.txt  GEOMAlgo_Algo.cxx  GEOMAlgo_Algo.hxx  GEOMAlgo_AlgoTools_1.cxx  GEOMAlgo_BndSphereTree.hxx  GEOMAlgo_Clsf.cxx  GEOMAlgo_Clsf.hxx  GEOMAlgo_ClsfBox.cxx  GEOMAlgo_ClsfBox.hxx  GEOMAlgo_ClsfQuad.hxx  GEOMAlgo_ClsfSurf.hxx  GEOMAlgo_CoupleOfShapes.cxx  GEOMAlgo_CoupleOfShapes.hxx  GEOMAlgo_DataMapIteratorOfDataMapOfPassKeyInteger.hxx  GEOMAlgo_DataMapOfShapePnt.hxx  GEOMAlgo_Extractor.cxx  GEOMAlgo_FinderShapeOn.cxx  GEOMAlgo_FinderShapeOn.hxx  GEOMAlgo_FinderShapeOn1.cxx  GEOMAlgo_FinderShapeOn1.hxx  GEOMAlgo_FinderShapeOn2.hxx  GEOMAlgo_FinderShapeOnQuad.cxx  GEOMAlgo_GetInPlace.hxx  GEOMAlgo_GetInPlaceAPI.hxx  GEOMAlgo_GetInPlace_1.cxx  GEOMAlgo_GlueDetector.cxx  GEOMAlgo_GlueDetector.hxx  GEOMAlgo_Gluer.hxx  GEOMAlgo_Gluer2.hxx  GEOMAlgo_Gluer2_2.cxx  GEOMAlgo_IndexedDataMapOfIntegerShape.hxx  GEOMAlgo_IndexedDataMapOfShapeBndSphere.hxx  GEOMAlgo_IndexedDataMapOfShapeIndexedMapOfShape.hxx  GEOMAlgo_IndexedDataMapOfShapeShapeInfo.hxx  GEOMAlgo_IndexedDataMapOfShapeState.hxx  GEOMAlgo_KindOfClosed.hxx  GEOMAlgo_KindOfName.hxx  GEOMAlgo_KindOfShape.hxx  GEOMAlgo_ListIteratorOfListOfPnt.hxx  GEOMAlgo_PassKeyMapHasher.cxx  (+15 more)
